Fix mobile tap highlight and navbar alignment issues

--- a/phone.css
+++ b/phone.css
@@ -3,10 +3,9 @@
   flex-direction: column;
 }
 #navbar ul li a {
-  overflow: hidden;
-  padding: 0px 7px;
-  padding-bottom: 8px;
+  padding: 6px 10px;
 }
+
 /*Home Section*/
 #home {
   height: 370px;
